--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <version>2.9.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.9.8</version>
+        </dependency>
 
     </dependencies>
 
